js/js.translator/testData/incremental/invalidation/functionTypeInterface/lib1/l1.0.kt
inline fun <reified T> getTypeName(s: T): String {
    return "${T::class}"
}
